--- a/src/style.css
+++ b/src/style.css
@@ -11,3 +11,21 @@ body{
     border-radius: 16px;
     padding: 30px;
 }
+.search-form-input{
+    background-color: #f9f7fe;
+    border: none;
+    border-radius: 6px;
+    width: 80%;
+    padding: 15px 20px;
+    font-size: 16px;
+}
+.search-form-button{
+    border: none;
+    border-radius: 6px;
+    padding: 15px 20px;
+    font-size: 16px;
+    color: white;
+    background: palevioletred;
+    margin-left: 5px;
+
+}
