--- a/src/style.css
+++ b/src/style.css
@@ -11,6 +11,10 @@ body{
     border-radius: 16px;
     padding: 30px;
 }
+header {
+    border-bottom: 1px solid #f9f7fe;
+    padding: 0 0 30px 0;
+}
 .search-form-input{
     background-color: #f9f7fe;
     border: none;
@@ -29,3 +33,10 @@ body{
     margin-left: 5px;
 
 }
+footer {
+    border-top: 1px solid #f9f7fe;
+    padding: 30px 0 0 0;
+    text-align: center;
+    font-size: 14px;
+    color: rgba(0, 0, 0, 0.6);
+  }
