--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,9 @@ body{
     background-color: #f9f7fe;
     font-family: "Roboto", sans-serif;
 }
+a {
+    color: #885df1;
+}
 
 .weather-app{
     background-color: white;
