--- a/src/style.css
+++ b/src/style.css
@@ -65,18 +65,18 @@ header {
 }
   
   .weather-app-icon {
-    font-size: 44px;
-    margin-top: 22px;
+    width: 88px;
+    height: 88px;
 }
   
   .weather-app-temperature {
     font-size: 88px;
-    margin-left: 10px;
+    line-height: 88px;
     font-weight: bold;
 }
   
   .weatehr-app-unit {
-    margin-top: 16px;
+    margin-top: 6px;
     font-size: 28px;
 }
 footer {
@@ -85,4 +85,7 @@ footer {
     text-align: center;
     font-size: 14px;
     color: rgba(0, 0, 0, 0.6);
+  }
+  main {
+    padding: 30px 0;
   }
